--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <div class="header">
             <div class="header-content">
                 <h1>🎲 Rubik's Cube Solver</h1>
-                <p>Interactive CFOP Method Solver with Advanced 3D Visualization</p>
+                <p>Interactive CFOP Method Solver with Advanced 3D Visualization for AeroHack 2025, made by Yash Budhia</p>
                 
                 <!-- Cube Type Tabs -->
                 <div class="cube-tabs">
@@ -20,11 +20,11 @@
                         <span>3x3 Cube</span>
                         <span class="tab-subtitle">CFOP Method</span>
                     </button>
-                    <button class="tab-btn" onclick="switchCubeType('2x2')" id="tab-2x2">
+                    <!-- <button class="tab-btn" onclick="switchCubeType('2x2')" id="tab-2x2">
                         <span class="tab-icon">🧩</span>
                         <span>2x2 Cube</span>
                         <span class="tab-subtitle">Ortega Method</span>
-                    </button>
+                    </button> -->
                     <!-- <button class="tab-btn" onclick="switchCubeType('4x4')" id="tab-4x4">
                         <span class="tab-icon">🎯</span>
                         <span>4x4 Cube</span>
